# zed-stata

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SEND-TO-STATA.md  add-jupyter-to-path.ps1  debug_test.ps1  extension.toml  extension.wasm  install-grammar.ps1  install-jupyter-stata.ps1  install-jupyter-stata.sh  install-send-to-stata.ps1  install-send-to-stata.sh  install-wasi-tools.ps1  refresh-environment.ps1  send-to-stata.ps1  send-to-stata.sh  setup.ps1  setup.sh  temp_test.do  test.do  test_repl.py  update-checksum.ps1  update-checksum.sh  update-setup-checksums.ps1  update_version.sh  validate.sh  verify-jupyter.ps1  zed-environment-check.ps1
grammars/: stata.wasm
grammars/stata/: Cargo.toml  README.md  grammar.js  package.json  tree-sitter.json
grammars/stata/bindings/rust/: build.rs  lib.rs
grammars/stata/queries/: brackets.scm  highlights.scm  indents.scm  outline.scm
grammars/stata/src/: grammar.json  node-types.json  parser.c  scanner.c
grammars/stata/test/: test.do  test2.do  test3.do
grammars/stata/test/corpus/: stata.txt
grammars/stata/tests/property/: zed-extension-grammar.prop.test.ts
grammars/stata/tests/unit/: zed-extension-grammar.test.ts
send-to-stata/: .gitignore  SendToStata.cs  SendToStata.csproj
src/: lib.rs
tests/: CrossPlatform.ps1  Generators.ps1  Mocks.ps1  config_parser.bats  grammar_build.bats  install-send-to-stata.Tests.ps1  install_jupyter_stata.bats  install_send_to_stata.bats  lsp_validator.bats  orchestration.bats  send-to-stata.Tests.ps1  send_to_stata.bats  send_to_stata_cd.bats  send_to_stata_lines.bats  (+3 more)
(+56 files in other folders)
