[package]
name = "tree-sitter-stata"
version = "0.1.8"
description = "Tree-sitter grammar for Stata"
authors = ["Jonathan Marc Bearak"]
license = "GPL-3.0"
repository = "https://github.com/jbearak/tree-sitter-stata"
edition = "2021"
keywords = ["tree-sitter", "stata", "parser"]
categories = ["parsing", "text-editors"]
build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.21.0"

[build-dependencies]
cc = "1.0"
